...
        app:layout_constraintTop_toBottomOf="@id/dropdown_mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/edit_trigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Trigger"
        app:layout_constraintTop_toBottomOf="@id/edit_reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
